Implemented AuthController
